Criação de entidades, contexto e repositório.

--- a/DapperWebApi/DapperWebApi/appsettings.json
+++ b/DapperWebApi/DapperWebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "server=.\\SQLExpress; database=DapperWebApiDB; Integrated Security=true Encrypt=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
