Criação dos controladores Funcionarios e Empresas e correção da string de conexão.

--- a/DapperWebApi/DapperWebApi/appsettings.json
+++ b/DapperWebApi/DapperWebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "server=.\\SQLExpress; database=DapperWebApiDB; Integrated Security=true Encrypt=false"
+    "SqlConnection": "server=.\\SQLExpress; database=DapperWebApiDB; Integrated Security=true; Encrypt=false"
   },
   "Logging": {
     "LogLevel": {
